Thu May 14 04:16:05 GMT 2015  Olly Betts <olly@survex.com>

	* common/getopt.cc,net/tcpserver.cc: Fix clang warnings on OS X.
	  Reported by Germán M. Bravo.

Thu May 14 03:44:06 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc,common/socket_utils.cc,common/socket_utils.h,
	  net/replicatetcpclient.cc,net/replicatetcpclient.h: Set SO_KEEPALIVE
	  for xapian-replicate's connection to the master, and add command
	  line option to allow setting socket-level timeouts (SO_RCVTIMEO and
	  SO_SNDTIMEO) on platforms that support them.  Fixes #546, reported
	  by nkvoll.

Thu May 14 03:34:26 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: Fix connection timeout to be 10 seconds
	  rather than 10000 seconds which is has been since 1.2.3.

Thu May 14 03:15:32 GMT 2015  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc: Backport assertion fixes from chert
	  to fix test failure of cursordelbug1 when assertions are enabled.

Wed May 06 13:18:11 GMT 2015  Olly Betts <olly@survex.com>

	* api/postlist.cc,api/postlist.h,common/remoteprotocol.h,matcher/,
	  net/remoteconnection.cc,net/serialise.cc,tests/api_backend.cc: Fix
	  sort by value when multiple databases are in use and one or more are
	  remote.  This change necessitated a minor version bump in the remote
	  protocol.  Fixes #674, reported by Dylan Griffith.

Wed May 06 11:18:24 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed May 06 10:00:49 GMT 2015  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Fix get_changeset_revisions() not
	  to potentially read uninitialised data if a changeset file is
	  truncated.  Adapted from equivalent change already backported for
	  brass and chert.

Wed May 06 07:22:23 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Tweak comment to match xapian-omega's configure.

Wed May 06 07:21:51 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Set default value for AUTOM4TE before AC_OUTPUT so the